--- a/project/res/layout/simple_spinner_item.xml
+++ b/project/res/layout/simple_spinner_item.xml
@@ -19,11 +19,13 @@
 
 This is here because some devices (SGS2) override the textSize and we want to make sure it's consistent.
 -->
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.expedia.bookings.widget.TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@android:id/text1"
     style="?android:attr/spinnerItemStyle"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:ellipsize="marquee"
     android:singleLine="true"
-    android:textSize="14sp" />
+    android:textSize="14sp"
+    app:textStyle="medium"/>
