--- a/project/res/layout/include_child_age_selectors.xml
+++ b/project/res/layout/include_child_age_selectors.xml
@@ -2,47 +2,42 @@
     android:id="@+id/child_ages_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical" >
+    android:orientation="horizontal"
+    android:baselineAligned="false"
+    android:gravity="center_horizontal"
+    android:weightSum="100" >
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="0px"
         android:layout_height="wrap_content"
-        android:baselineAligned="false"
-        android:gravity="center_horizontal"
-        android:weightSum="100" >
+        android:layout_weight="50"
+        android:orientation="vertical" >
 
-        <LinearLayout
-            android:layout_width="0px"
-            android:layout_height="wrap_content"
-            android:layout_weight="50"
-            android:orientation="vertical" >
+        <include
+            android:id="@+id/child_1_age_layout"
+            layout="@layout/include_child_age_row"
+            android:visibility="visible" />
 
-            <include
-                android:id="@+id/child_1_age_layout"
-                layout="@layout/include_child_age_row"
-                android:visibility="visible" />
+        <include
+            android:id="@+id/child_3_age_layout"
+            layout="@layout/include_child_age_row"
+            android:visibility="visible" />
+    </LinearLayout>
 
-            <include
-                android:id="@+id/child_3_age_layout"
-                layout="@layout/include_child_age_row"
-                android:visibility="visible" />
-        </LinearLayout>
+    <LinearLayout
+        android:layout_width="0px"
+        android:layout_height="wrap_content"
+        android:layout_weight="50"
+        android:orientation="vertical" >
 
-        <LinearLayout
-            android:layout_width="0px"
-            android:layout_height="wrap_content"
-            android:layout_weight="50"
-            android:orientation="vertical" >
+        <include
+            android:id="@+id/child_2_age_layout"
+            layout="@layout/include_child_age_row"
+            android:visibility="visible" />
 
-            <include
-                android:id="@+id/child_2_age_layout"
-                layout="@layout/include_child_age_row"
-                android:visibility="visible" />
-
-            <include
-                android:id="@+id/child_4_age_layout"
-                layout="@layout/include_child_age_row"
-                android:visibility="visible" />
-        </LinearLayout>
+        <include
+            android:id="@+id/child_4_age_layout"
+            layout="@layout/include_child_age_row"
+            android:visibility="visible" />
     </LinearLayout>
 </LinearLayout>
