--- a/project/res/layout/fragment_tablet_checkout_data_form.xml
+++ b/project/res/layout/fragment_tablet_checkout_data_form.xml
@@ -46,6 +46,18 @@
             android:textSize="16dp"
             app:textStyle="light" />
 
+        <View
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"/>
+
+        <FrameLayout
+            android:id="@+id/extra_heading_container"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <!-- Content dynamically added here in TabletCheckoutDataFormFragment.attachSpinner() -->
+        </FrameLayout>
+
     </LinearLayout>
 
     <RelativeLayout
