--- a/project/res/layout/traveler_autocomplete_row.xml
+++ b/project/res/layout/traveler_autocomplete_row.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="48dp"
-    android:orientation="horizontal"
-    android:background="#FFFFFF">
+    android:background="@drawable/bg_clickable_row"
+    android:orientation="horizontal">
 
     <ImageView
         android:id="@android:id/icon"
@@ -17,6 +17,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
+        android:paddingRight="8dp"
         android:layout_gravity="center_vertical"
         android:ellipsize="marquee"
         android:singleLine="true"
