Add a ViewServer that we can toggle in the app dev settings
It's really annoying to hook up Romain Guy's `ViewServer`, but Jake
Wharton found a way to hook it into the activity life-cycle in the
`Application`. So based on a preference I wire up the server so we can
use hierarchyviewer on non-root devices at our whim.

--- a/project/res/xml/preferences_dev.xml
+++ b/project/res/xml/preferences_dev.xml
@@ -52,6 +52,12 @@
             android:summary="Force the GOOGLE_WALLET error to be added to the checkout response. Will be the primary error, no matter what."
             android:title="Force Google Wallet error" />
 
+        <CheckBoxPreference
+            android:defaultValue="false"
+            android:key="@string/preference_should_start_hierarchy_server"
+            android:summary="Needs app restart to take effect. Then you can use hierarchy viewing on a non-root device."
+            android:title="Start the hierarchy server on app launch" />
+
     </PreferenceCategory>
 
     <PreferenceCategory android:title="Hotels" >
