--- a/project/res/values/donottranslate.xml
+++ b/project/res/values/donottranslate.xml
@@ -90,6 +90,7 @@
     <string name="preference_fake_invalid_google_wallet_line_item">preference_fake_invalid_google_wallet_line_item</string>
     <string name="preference_force_google_wallet_error">preference_force_google_wallet_error</string>
     <string name="preference_force_custom_server_http_only">preference_force_custom_server_http_only</string>
+    <string name="preference_should_start_hierarchy_server">preference_should_start_hierarchy_server</string>
 
     <!-- Setting keys -->
     <string name="setting_hide_hotel_attach">setting_hide_hotel_attach</string>
