--- a/project/res/layout/row_flight_histogram.xml
+++ b/project/res/layout/row_flight_histogram.xml
@@ -9,22 +9,22 @@
         android:id="@+id/flight_histogram_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingBottom="10dp"
+        android:paddingBottom="@dimen/results_flight_histogram_vertical_padding"
         android:paddingLeft="@dimen/results_flight_histogram_horizontal_padding"
         android:paddingRight="@dimen/results_flight_histogram_horizontal_padding"
-        android:paddingTop="10dp"
+        android:paddingTop="@dimen/results_flight_histogram_vertical_padding"
         android:textSize="16sp"
         android:textColor="@android:color/white"
         android:singleLine="true"
-        android:background="@drawable/bg_flight_summary_row_tablet"
+        android:background="@drawable/bg_row_flight_histogram"
         app:textStyle="normal" />
 
     <com.expedia.bookings.widget.TextView
         android:id="@+id/flight_histogram_price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/results_flight_histogram_price_margin_left"
-        android:layout_marginRight="@dimen/results_flight_histogram_price_margin_left"
+        android:layout_marginLeft="@dimen/results_flight_histogram_price_horizontal_margin"
+        android:layout_marginRight="@dimen/results_flight_histogram_price_horizontal_margin"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:textSize="16sp"
