--- a/project/res/layout/fragment_price_change_notification.xml
+++ b/project/res/layout/fragment_price_change_notification.xml
@@ -24,7 +24,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#DDDDDD"
+        android:background="@android:color/white"
         android:gravity="center"
         android:orientation="horizontal"
         android:padding="10dp">
