Change logoURL in Info screen for tvly-CA
Summary: If this is not right approach then, please suggest if there is
any other approach to have different strings based on POS.

Reviewers: brennan

Reviewed By: brennan

Subscribers: sugupta

Differential Revision: https://phabricator.mobiata.com/D391

--- a/project/res/values/ids.xml
+++ b/project/res/values/ids.xml
@@ -54,4 +54,7 @@
     <item name="bg_launch_tvly_arizona" type="drawable"/>
     <item name="bg_launch_tvly_maldives" type="drawable"/>
 
+    <!-- for visibility of Tvly CA Url string id while compiling ExpediaApp-->
+    <item name="travelocity_info_url_CA" type="string"/>
+
  </resources>
