Adding id so Expedia flavor compiles
Reviewers: brennan

Reviewed By: brennan

Subscribers: sugupta

Differential Revision: https://phabricator.mobiata.com/D402

--- a/project/res/values/ids.xml
+++ b/project/res/values/ids.xml
@@ -57,4 +57,7 @@
     <!-- for visibility of Tvly CA Url string id while compiling ExpediaApp-->
     <item name="travelocity_info_url_CA" type="string"/>
 
+    <!-- Tvly contact phone text, adding to avoid compilation failure for Expedia-->
+    <item name="contact_phone_template_tvly" type="string"/>
+
  </resources>
