--- a/project/res/layout/fragment_tablet_tripbucket_item.xml
+++ b/project/res/layout/fragment_tablet_tripbucket_item.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/root_layout"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="@dimen/hotel_flight_card_padding_y"
@@ -11,6 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
 
+        <!-- Expanded / receipt Part -->
+
         <FrameLayout
             android:id="@+id/trip_bucket_item_expanded_container"
             android:layout_width="match_parent"
@@ -19,10 +21,99 @@
             android:background="#ffffff"
             android:visibility="gone" />
 
-        <FrameLayout
+        <!-- Top Part -->
+
+        <RelativeLayout
             android:id="@+id/trip_bucket_item_top_container"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="@dimen/hotel_flight_card_height">
+
+            <com.expedia.bookings.widget.OptimizedImageView
+                android:id="@+id/tripbucket_card_background_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="fitCenter"/>
+
+            <LinearLayout
+                android:id="@+id/book_button_container"
+                android:layout_width="match_parent"
+                android:layout_height="42dp"
+                android:layout_alignParentBottom="true"
+                android:layout_marginBottom="18dp"
+                android:layout_marginLeft="12dp"
+                android:layout_marginRight="12dp"
+                android:background="@drawable/bg_btn_trip_bucket_book_now"
+                android:orientation="horizontal">
+
+                <com.expedia.bookings.widget.TextView
+                    android:id="@+id/book_button_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="10dp"
+                    android:drawableLeft="@drawable/ic_book_bucket_arrow"
+                    android:drawablePadding="10dp"
+                    android:gravity="left|center_vertical"
+                    android:textColor="#FFDB4C"
+                    android:textSize="18sp"
+                    app:textStyle="medium"/>
+
+                <com.expedia.bookings.widget.TextView
+                    android:id="@+id/trip_bucket_price_text"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginRight="10dp"
+                    android:layout_weight="1"
+                    android:gravity="right|center_vertical"
+                    android:textColor="@android:color/white"
+                    android:textSize="21sp"
+                    app:textStyle="bold"/>
+            </LinearLayout>
+
+            <ImageView
+                android:id="@+id/booking_complete_check"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:background="@drawable/ic_booking_complete_check"
+                android:visibility="visible"
+                android:layout_above="@id/book_button_container"
+                android:layout_alignParentTop="true"
+                android:scaleType="center"/>
+
+            <LinearLayout
+                android:id="@+id/name_and_trip_duration_container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:layout_above="@id/book_button_container"
+                android:layout_alignParentTop="true"
+                android:orientation="vertical">
+
+                <com.expedia.bookings.widget.TextView
+                    android:id="@+id/name_text_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:gravity="center"
+                    android:singleLine="true"
+                    android:textColor="#ffffff"
+                    android:textSize="16sp"
+                    app:textStyle="medium"/>
+
+                <com.expedia.bookings.widget.TextView
+                    android:id="@+id/trip_duration_text_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:gravity="center"
+                    android:singleLine="true"
+                    android:textColor="#ffffff"
+                    android:textSize="16sp"
+                    app:textStyle="light"/>
+
+            </LinearLayout>
+
+        </RelativeLayout>
 
         <View
             android:layout_width="match_parent"
@@ -44,11 +135,50 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
 
-        <FrameLayout
-            android:id="@+id/trip_bucket_item_price_change_container"
+        <LinearLayout
+            android:id="@+id/price_change_notification_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:visibility="gone"/>
+            android:layout_gravity="right"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/little_up_arrow"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="30dp"
+                android:layout_gravity="right"
+                android:adjustViewBounds="true"
+                android:src="@drawable/bg_price_alert_arrow" />
+
+            <View
+                android:id="@+id/grey_bar"
+                android:layout_width="match_parent"
+                android:layout_height="5dp"
+                android:background="#BFBFBF" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#DDDDDD"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:padding="10dp">
+
+                <ImageView
+                    android:id="@+id/exclaimation"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="10dp"
+                    android:adjustViewBounds="true"
+                    android:src="@drawable/ic_price_alert_exclamation" />
+
+                <TextView
+                    android:id="@+id/price_change_notification_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
+        </LinearLayout>
 
     </FrameLayout>
 
