--- a/project/res/layout-sw600dp/section_hotel_edit_creditcard.xml
+++ b/project/res/layout-sw600dp/section_hotel_edit_creditcard.xml
@@ -17,6 +17,7 @@
         android:layout_height="48dp"
         android:layout_width="match_parent"
         android:layout_weight="1"
+        android:visibility="gone"
         android:orientation="horizontal">
 
         <com.expedia.bookings.widget.TextView
