--- a/project/res/layout/fragment_tablet_tripbucket_item.xml
+++ b/project/res/layout/fragment_tablet_tripbucket_item.xml
@@ -160,7 +160,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="#DDDDDD"
+                android:background="@android:color/white"
                 android:gravity="center"
                 android:orientation="horizontal"
                 android:padding="10dp">
