--- a/project/res/values/dimens.xml
+++ b/project/res/values/dimens.xml
@@ -99,6 +99,7 @@
     <dimen name="flight_search_space_between_rows">6dp</dimen>
     <dimen name="flight_search_calendar_height">300dp</dimen>
     <dimen name="flight_search_airport_padding_left">12dp</dimen>
+    <dimen name="flight_search_padding">10dp</dimen>
 
     <!-- Plane window view dimens -->
     <!-- These must always be linked -->
