--- a/project/res/layout/guest_picker.xml
+++ b/project/res/layout/guest_picker.xml
@@ -14,7 +14,8 @@
             android:id="@+id/adults_minus"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_tablet_traveler_minus" />
+            android:padding="8dp"
+            android:src="@drawable/ic_traveler_minus" />
 
         <com.expedia.bookings.widget.TextView
             android:id="@+id/adult_count_text"
@@ -29,14 +30,15 @@
             android:id="@+id/adults_plus"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_tablet_traveler_plus" />
+            android:padding="8dp"
+            android:src="@drawable/ic_traveler_plus" />
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/children_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="4dp"
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
@@ -44,7 +46,8 @@
             android:id="@+id/children_minus"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_tablet_traveler_minus" />
+            android:padding="8dp"
+            android:src="@drawable/ic_traveler_minus" />
 
         <com.expedia.bookings.widget.TextView
             android:id="@+id/child_count_text"
@@ -59,7 +62,8 @@
             android:id="@+id/children_plus"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_tablet_traveler_plus" />
+            android:padding="8dp"
+            android:src="@drawable/ic_traveler_plus" />
     </LinearLayout>
 
     <include layout="@layout/include_child_age_selectors" />
