Tvly-CA adding support for French locale
Summary:
- Adding new strings received from Localization team
- Moving 'tvly_itinerary' string to res_travelocity
- Don't force locale if it is already the current locale

Reviewers: brennan

Reviewed By: brennan

Subscribers: sugupta

Differential Revision: https://phabricator.mobiata.com/D412

--- a/project/res/values/ids.xml
+++ b/project/res/values/ids.xml
@@ -60,4 +60,7 @@
     <!-- Tvly contact phone text, adding to avoid compilation failure for Expedia-->
     <item name="contact_phone_template_tvly" type="string"/>
 
+    <!-- Tvly tvly itin label text -->
+    <item name="tvly_itinerary" type="string"/>
+
  </resources>
