2689: Better margins for 7inch
No overlapping images plox

--- a/project/res/layout/fragment_tablet_hotel_gallery.xml
+++ b/project/res/layout/fragment_tablet_hotel_gallery.xml
@@ -53,6 +53,8 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
+            android:paddingLeft="@dimen/tablet_gallery_viewpager_padding"
+            android:paddingRight="@dimen/tablet_gallery_viewpager_padding"
             android:background="#E5000000" />
 
     </LinearLayout>
