--- a/project/res/values-land/dimens.xml
+++ b/project/res/values-land/dimens.xml
@@ -15,4 +15,7 @@
 	<dimen name="gallery_size">250dp</dimen>
 
 	<dimen name="hotel_row_price_text_view_max_width">350dp</dimen>
+
+    <dimen name="tablet_gallery_viewpager_padding">300dp</dimen>
+    <dimen name="tablet_gallery_viewpager_gutter_margin">150dp</dimen>
 </resources>
