--- a/project/res/layout/fragment_tablet_checkout_controller.xml
+++ b/project/res/layout/fragment_tablet_checkout_controller.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.expedia.bookings.widget.FrameLayoutTouchController xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
              android:id="@+id/root_layout"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
@@ -103,6 +104,11 @@
                         android:indeterminate="true" />
                 </LinearLayout>
             </FrameLayout>
+
+            <FrameLayout
+                android:id="@+id/booking_unavailable_container"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
 
             <FrameLayout
                 android:id="@+id/checkout_forms_and_slide_container"
