--- a/project/res/layout/fragment_tablet_tripbucket_item.xml
+++ b/project/res/layout/fragment_tablet_tripbucket_item.xml
@@ -55,7 +55,7 @@
                     android:gravity="left|center_vertical"
                     android:textColor="#FFDB4C"
                     android:textSize="18sp"
-                    app:textStyle="medium"/>
+                    app:textStyle="medium" />
 
                 <com.expedia.bookings.widget.TextView
                     android:id="@+id/trip_bucket_price_text"
@@ -67,6 +67,31 @@
                     android:textColor="@android:color/white"
                     android:textSize="21sp"
                     app:textStyle="bold"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/sold_out_container"
+                android:layout_width="match_parent"
+                android:layout_height="42dp"
+                android:layout_alignParentBottom="true"
+                android:layout_marginBottom="18dp"
+                android:layout_marginLeft="12dp"
+                android:layout_marginRight="12dp"
+                android:background="@drawable/bg_btn_trip_bucket_book_now"
+                android:visibility="gone"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <com.expedia.bookings.widget.TextView
+                    android:id="@+id/sold_out_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:text="@string/trip_bucket_sold_out"
+                    android:textColor="#FFDB4C"
+                    android:textSize="18sp"
+                    app:textStyle="medium" />
+
             </LinearLayout>
 
             <ImageView
